crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__folding_range__tests__folding_nested_section_comments.snap
---
source: crates/ark-lsp-core/src/lsp/folding_range.rs
assertion_line: 459
expression: "test_folding_range(\"\n# Level 1 ----\na\n\n## Level 2 ----\nb\n\n### Level 3 ----\nc\n\n## Another Level 2 ----\nd\n\n# Back to Level 1 ----\ne\n\n# %% Chunk at Level 1\nf\n\n## %% Another chunk at Level 1\ng\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 12,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 4,
        start_character: None,
        end_line: 9,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 7,
        start_character: None,
        end_line: 9,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 10,
        start_character: None,
        end_line: 12,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 13,
        start_character: None,
        end_line: 20,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 16,
        start_character: None,
        end_line: 18,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 19,
        start_character: None,
        end_line: 20,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
