crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__folding_range__tests__folding_regions.snap
---
source: crates/ark-lsp-core/src/lsp/folding_range.rs
assertion_line: 538
expression: "test_folding_range(\"\n#region Important code\na\nb\nc\n#endregion\n\n#region Another section\nd\n#endregion\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 5,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 7,
        start_character: None,
        end_line: 9,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
