crates/ark-lsp-core/src/lsp/snapshots/ark_lsp_core__lsp__folding_range__tests__folding_section_chunks_with_sections.snap
---
source: crates/ark-lsp-core/src/lsp/folding_range.rs
assertion_line: 518
expression: "test_folding_range(\"\n# Section ----\na\n\n#+ Cell\nb\n\n# Section ----\nc\n\n#+ Other cell\nd\n\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 6,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 4,
        start_character: None,
        end_line: 6,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 7,
        start_character: None,
        end_line: 12,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 10,
        start_character: None,
        end_line: 12,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
